# poke_shakespeare

./: Cargo.toml  Dockerfile  README.md  Rocket.toml
.githooks/: pre-commit
.github/workflows/: test.yml
src/: api.rs  config.rs  lib.rs  main.rs  services.rs
