[package]
name = "poke_shakespeare"
version = "0.1.0"
authors = ["Rodrigo Gryzinski <rogryza@rogryza.com>"]
edition = "2018"

[lib]
name = "poke_shakespeare_lib"
path = "src/lib.rs"

[[bin]]
name = "poke_shakespeare"
path = "src/main.rs"

[dependencies]
rocket = "0.4.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
