[package]
name = "poke_shakespeare"
version = "0.1.0"
authors = ["Rodrigo Gryzinski <rogryza@rogryza.com>"]
edition = "2018"

[lib]
name = "poke_shakespeare_lib"
path = "src/lib.rs"

[[bin]]
name = "poke_shakespeare"
path = "src/main.rs"

[dependencies]
anyhow = "1"
log = "0.4.8"
lru = "0.5"
reqwest = { version = "0.10", features = ["blocking", "json"] }
rocket = "0.4.5"
rocket_contrib = "0.4.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
